Fix broken css

--- a/src/components/layouts/header/Header.styles.scss
+++ b/src/components/layouts/header/Header.styles.scss
@@ -6,6 +6,10 @@
     justify-content: space-between;
     border-bottom: 1px solid #26B9A7;
     align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    
 }
 
 .logo-and-text  {
